# RPAChatbotAssistant

./: .gitignore  README.md
rpachatbotassistant/ChattyStreamUI/: Dockerfile  README.md  environment.yml  pyproject.toml
rpachatbotassistant/ChattyStreamUI/chattystreamui/: chatbot.py  main.py
rpachatbotassistant/Converso/: README.md  environment.yml  pyproject.toml  setup.py
rpachatbotassistant/Converso/converso/: NIB.txt  SendInformationRPAStrategy.py  converso_factory.py  main.py  parking_lot.txt  rooms.txt  time_off.txt
rpachatbotassistant/Converso/converso/AI/: generator.py  intent_recognition.py  intentions_entities.py  ner.py  openai_api.py
rpachatbotassistant/Converso/converso/chatbot_strategy/: ChatbotStrategy.py  __init__.py  conversational_strategy_handler.py  rpa_strategy_handler.py
rpachatbotassistant/DistilDataQuarry/: Makefile  README.md  environment.yml  pyproject.toml  setup.py
rpachatbotassistant/DistilDataQuarry/data/processed/: data.csv
rpachatbotassistant/DistilDataQuarry/data/python_files/: parking_lot.py  rooms.py  test_intents.py
rpachatbotassistant/DistilDataQuarry/data/raw/: NIB.txt  goodbye.txt  greeting.txt  nothing_related.txt  parking_lot.txt  rooms.txt  time_off.txt
rpachatbotassistant/DistilDataQuarry/docs/: Makefile  conf.py  index.rst  make.bat
rpachatbotassistant/DistilDataQuarry/docs/wiki/: README.md
rpachatbotassistant/DistilDataQuarry/notebooks/: testdeploy.ipynb
rpachatbotassistant/DistilDataQuarry/src/: main.py
rpachatbotassistant/DistilDataQuarry/src/amls_pipeline/: __init__.py  component_data_prep.py  component_train.py
rpachatbotassistant/DistilDataQuarry/src/conf/: config.yaml
rpachatbotassistant/DistilDataQuarry/src/data/: make_dataset.py
rpachatbotassistant/DistilDataQuarry/src/dependencies/: Dockerfile  conda.yml
rpachatbotassistant/DistilDataQuarry/src/visualization/: analyse_dataset.py
rpachatbotassistant/RPASimulator/: README.md  environment.yml  pyproject.toml
rpachatbotassistant/RPASimulator/rpasimulator/: app.py
(+18 files in other folders)
