[tool.poetry]
name = "chattystreamui"
version = "0.1.0"
description = "A Python chatbot UI for customer/RPA support"
authors = ["Henrique Malta <silvinohenrique.teixeiramalta@isobar.onmicrosoft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
streamlit = "^1.21.0"
streamlit-chat = "^0.0.2.2"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
