[tool.poetry]
name = "converso"
version = "0.1.0"
description = "A Python Library to generate responses from user prompt"
authors = ["Henrique Malta <silvinohenrique.teixeiramalta@isobar.onmicrosoft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.4"
requests = "^2.28.2"


[tool.poetry.group.DEV.dependencies]
yapf = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
