[tool.poetry]
name = "distildataquarry"
version = "0.1.0"
description = ""
authors = ["silvinohenrique.teixeiramalta <silvinohenrique.teixeiramalta@isobar.onmicrosoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
azure-ai-ml = "^1.8.0"
azure-identity = "^1.13.0"
azureml-infra-tools = "0.1.0a3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
