[tool.poetry]
name = "rpasimulator"
version = "0.1.0"
description = ""
authors = ["Henrique Malta"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
jsonify = "^0.5"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
